@@ -1,3 +1,7 @@
+
+Deal with yet another seemingly nondetermininstic "Press enter to
+continue" prompt.
+
 - 1.18 released -
 
 Deal with sysinst no longer asking for a password cipher.
